# nano-eval

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml  gemini_example.yaml  groq_example.yaml  mistral_example.yaml  ollama_example.yaml
nano_eval/: __init__.py  cli.py
nano_eval/config/: __init__.py  schema.py
nano_eval/core/: __init__.py  runner.py
nano_eval/evaluators/: __init__.py  base.py  contains.py  exact.py  factory.py  llm_judge.py  regex.py
nano_eval/report/: __init__.py  schema.py
nano_eval/runners/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py
